--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -444,3 +444,13 @@ year = {2019}
 	year = {2018},
 	howpublished = {\href{https://bit.ly/2E5oKSq}{\texttt{https://bit.ly/2E5oKSq}}}
 }
+
+@article{arrow1950difficulty,
+  title={{A Difficulty in the Concept of Social Welfare}},
+  author={Arrow, Kenneth J},
+  journal={Journal of Political Economy},
+  volume={58},
+  number={4},
+  pages={328--346},
+  year={1950},
+}
