small edits abstract

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -82,7 +82,7 @@
 \begin{abstract}
 \onehalfspacing
 \noindent
-Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer multilevel solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results highlights the possible difficulties in crafting broad climate mitigation agreements, and they offer new insights on how to integrate interventions at the local and international levels.
+Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer multilevel solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results identify possible challenges in crafting regional climate mitigation agreements, and offer new insights on how to integrate interventions at the local and international levels.
 
 \vspace{.5cm}
 
