edit figures 3 and 4

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -191,7 +191,7 @@ Overall, the results do not conform to strictly top-down or bottom-down approach
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{countries.pdf}
-	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by country.} Bars represent 95\% confidence intervals.}
+	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by country}}
 	\label{fig:countries}
 \end{figure}
 
@@ -204,7 +204,7 @@ Figure~\ref{fig:types} shows the results disaggregated by elite type. Academics,
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{types.pdf}
-	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by elite type.}}
+	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by elite type}}
 	\label{fig:types}
 \end{figure}
 
