--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -454,3 +454,34 @@ year = {2019}
   pages={328--346},
   year={1950},
 }
+
+@article{benitez2006site,
+  title={{Site Identification for Carbon Sequestration in Latin America: A Grid-Based Economic Approach}},
+  author={Ben{\'\i}tez, Pablo C and Obersteiner, Michael},
+  journal={Forest Policy and Economics},
+  volume={8},
+  number={6},
+  pages={636--651},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{lyall2019speculative,
+  title={{The Speculative Petro-State: Volatile Oil Prices and Resource Populism in Ecuador}},
+  author={Lyall, Angus and Valdivia, Gabriela},
+  journal={Annals of the American Association of Geographers},
+  pages={1--12},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{sagarzazu2019foreign,
+  title={{The Foreign Policy Rhetoric of Populism: Ch{\'a}vez, Oil, and Anti-imperialism}},
+  author={Sagarzazu, I{\~n}aki and Thies, Cameron G},
+  journal={Political Research Quarterly},
+  volume={72},
+  number={1},
+  pages={205--214},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
