--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -82,7 +82,7 @@
 \begin{abstract}
 \onehalfspacing
 \noindent
-Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer multilevel solutions to tackle global warming, but there is considerable heterogeneity across countries and elite types. Our results identify possible challenges in crafting regional climate mitigation agreements, and offer new insights on how to integrate interventions at the local and international levels.
+Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer multilevel solutions to tackle global warming, but there is considerable heterogeneity across countries and elite types. Our results identify possible challenges in crafting regional climate mitigation policies and offer new insights on how to integrate interventions at the local and international levels.
 
 \vspace{.5cm}
 
@@ -92,7 +92,7 @@ Policy makers generally assume that climate change mitigation requires global sc
 \vspace{.5cm}
 
 \noindent 
-\textbf{Word count:} 3,510
+\textbf{Word count:} 3,527
 \end{abstract}
 
 \newpage
@@ -108,20 +108,20 @@ Yet this consensus does not translate itself into effective political action. Gl
 
 Recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for politicians and interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
 
-Despite the potential advantages of polycentric arrangements, two challenges may undermine their popular support. First, polycentric systems demand constant civic participation at multiple government levels. But as climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
+Despite the potential advantages of polycentric arrangements, two challenges may undermine their efficiency and popular support. First, polycentric systems demand constant civic participation at multiple government levels. Because climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
 Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two necessary conditions for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. As a result, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
 
-We design a conjoint experiment to assess which climate change governance system Latin American elites are willing to support. In our survey, we asked 654 `elites' -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices. We recruited respondents from Argentina, Brazil, Bolivia, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru.
+We design an experiment to assess which climate change governance system Latin American elites are willing to support. In our survey, we asked 654 respondents -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices.
 
 In what follows, we describe our experimental methods and results. We then turn to two additional analyses, in which we disaggregate the responses according to country and elite type, and proceed to the concluding remarks.
 
 \section{Data and Methods}%
 \label{sec:data_and_methods}
 
-We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
+We use conjoint experiments to estimate the effect of institutional features on climate mitigation agreements. Our sample consists of Latin American elites. Latin America is the most biodiverse region in the world and plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{benitez2006site,yang2018post}. Second, Latin American elites have wide disagreements over preservation policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide,lyall2019speculative,sagarzazu2019foreign}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-We use a dataset compiled specifically for this study. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
+We use a dataset compiled specifically for this study. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
 
 After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
@@ -153,7 +153,7 @@ Renegotiation & Never; fifty years; twenty years; five years; one year \\
 \end{center}
 \end{table}
 
-The categories map the main conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
+The categories map main conceptual differences between polycentric and state-led climate mitigation policies \citep[e.g.][]{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
 
 \begin{figure}[H]
 	\centering
@@ -162,12 +162,12 @@ The categories map the main conceptual differences between polycentric and state
 	\label{fig:conjoint}
 \end{figure}
 
-We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. We report marginal means instead of average marginal conditional effects (AMCE). \citet{leeper2018subgroup} show that AMCEs can be misleading in subgroup analysis as model results are sensitive to the choice of reference categories in interactions. In contrast, marginal means provide a clear description of quantities of interest, in our case preferences towards agreement attributes, while allowing for easy comparisons between groups of respondents. For these reason, we opt for a visual presentation of our results using marginal means, but readers can refer to the Supplementary Material for ACME estimates.  
+We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. Here we report marginal means instead of average marginal conditional effects (AMCE) of climate agreement attributes. \citet{leeper2018subgroup} show that AMCEs can be misleading in subgroup analysis as model results are sensitive to the choice of reference categories in interactions. In contrast, marginal means provide a clear description of quantities of interest, in our case preferences towards agreement attributes, while allowing for easy comparisons between groups of respondents. For these reasons, we include marginal means in the visual presentation of our results, but readers can refer to the Supplementary Material for AMCE estimates.  
 
 \section{Results}%
 \label{sec:results}
 
-Figure~\ref{fig:pooled} shows our main results. The graph illustrates the preference associate with each attribute of hypothetical climate mitigation agreements. Dots with horizontal bars represent point estimates and 95\% confidence intervals from linear regressions with cluster-robust standard errors. \\ 
+Figure~\ref{fig:pooled} shows our main results. The graph illustrates the preference associated with each attribute of hypothetical climate mitigation agreements. Dots with horizontal bars represent point estimates and 95\% confidence intervals from linear regressions with cluster-robust standard errors. \\ 
 
 \begin{figure}[H]
 	\centering
@@ -176,17 +176,17 @@ Figure~\ref{fig:pooled} shows our main results. The graph illustrates the prefer
 	\label{fig:pooled}
 \end{figure}
 
-Respondents prefer that international organisations create climate mitigation rules (54\%, SE = 1.2), but they also hold favourable views of local communities (51.6\%, SE = 1.25), local governments (49.8\%, SE = 1.2), and state governments (48.6\%, SE = 1.3) as rule-makers. Although local communities receive slightly more support than the other alternatives, the differences among the three groups are not statistically significant. Interestingly, Latin American elites support multiple levels simultaneously, what suggests they are willing to incorporate separate political spheres into the climate change regime. We also observe that non-governmental organisations are the least preferred option for climate change rule-making with 45.5\% (SE = 1.3). 
+Respondents prefer international organisations to establish climate mitigation rules (54\%, SE = 1.2), but they also hold favourable views of local communities (51.6\%, SE = 1.25), local governments (49.8\%, SE = 1.2), and state governments (48.6\%, SE = 1.3) as rule-makers. Although local communities receive slightly more support than the other alternatives, the differences among the three groups are not statistically significant. Interestingly, Latin American elites support multiple levels simultaneously, what suggests they are willing to incorporate separate political spheres into the climate change regime. We also observe that non-governmental organisations are the least preferred option for climate change rule-making with 45.5\% (SE = 1.3). 
 
 We see a similar pattern with respect to conflict resolution. Respondents suggest disputes should be addressed mainly by the United Nations and local courts. These two choices have 57.3\% (SE = 1.2) and 54.6\% (SE = 1.2) approval, respectively. Private arbitration comes next with 50\% (SE = 1.3), followed by government bureaucracy with 46.4\% (SE = 1.3). Informal norms receive only 41\% support (SE = 1.3). 
 
-Latin American elites agree with graduated sanctions to repeated offenders (53.2\%, SE = 0.9) and they believe agreement costs should be allocated according to the country's history of emissions (53.6\%, SE = 1.1). Moreover, related to the same idea of proportionality, respondents indicate that lawbreakers should be punished with fines (55.3\%, SE = 1.1), which can be easily increased if necessary.
+Participants agree with graduated sanctions to repeated offenders (53.2\%, SE = 0.9) and they believe agreement costs should be allocated according to the country's history of emissions (53.6\%, SE = 1.1). Moreover, related to the same idea of proportionality, respondents indicate that lawbreakers should be punished with fines (55.3\%, SE = 1.1), which can be easily increased if necessary.
 
 We find no evidence that rich countries alone should bear the burden of climate change mitigation costs. Latin American elites believe developing countries should also contribute to the provision of global public goods. This suggests that elites view it was legitimate to contribute to climate change solutions, so this may not be a major source of free riding to climate change solutions in the region.
 
 In terms of agreement duration, respondents are interested in a balance between stability and flexibility. Agreements that either cannot be modified or that last for 50 years are rejected by the interviewees. Their preference lies in agreements that can be renegotiated every five years (59\%, SE = 1.2), as they are durable enough to provide long-term incentives to the parties, yet still adaptable to unforeseen demands.
 
-Overall, the results do not conform to strictly top-down or bottom-down approaches. While we do see evidence for coordination at the macro level, respondents are open to input from other government actors and local groups. But we find that elites also do not fully agree with polycentric arrangements. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
+Overall, the results do not conform to strictly top-down or bottom-down approaches. While elites favour solutions provided at the macro level, they are also open to input from other government actors and local groups. But we find that respondents do not fully agree with polycentric arrangements. As we noted above, the data do not show major difference in preferences between federal and local governments and between these and community-based solutions. Further, the rejection on non-governmental organisations points to a discredit of self-governing arrangements as a means to deal with global warming. This last result is consistent with the Latin American tradition of heavier reliance on the state than on voluntary organisations.
 
 \begin{figure}[H]
 	\centering
@@ -195,9 +195,9 @@ Overall, the results do not conform to strictly top-down or bottom-down approach
 	\label{fig:countries}
 \end{figure}
 
-We also examine how our results vary across countries and types of elites. Figure~\ref{fig:countries} displays the preferred climate change agreement characteristics for each of the 10 countries in our sample. The disaggregated data confirm that elites have a generalised preference for a heavy role by international agencies in terms of solving conflicts, and a generalised dislike for informal norms. In addition, the cross-country results also show a preference for a positive role by federal to local government, or local community members being involved in the deliberation process.
+We also examine how our results vary across countries and types of elites. Figure~\ref{fig:countries} displays the preferred climate change agreement characteristics for each of the 10 countries in our sample. The disaggregated data confirm that elites have a generalised preference for a heavy role by international agencies in terms of solving conflicts, and a generalised dislike for informal norms. In addition, the cross-country results show a preference for a positive role by federal and local governments, and that local community members should also participate in the deliberation process.
 
-However, some of the regional patterns are a by-product of sample aggregation. Latin American countries do not agree on which organisations should provide the rules Costa Rica prefers local to global rule-making; Mexico prefers global and dislikes local, similar to Peru, Argentina, and Brazil; Colombia prefers global and local rule-making simultaneously; and Bolivia prefers local organisations to design climate treaties. This has important consequences for climate policies in the region. The lack of coordination about which governance body should create the treaty may configure a case of Arrow's impossibility theorem \citep{arrow1950difficulty}. Should a polycentric system be put for vote at international arenas, it is unclear what would be the outcome as regional consensus seems unlikely. 
+However, some of the regional preferences are a by-product of sample aggregation. Latin American countries do not have a consensus on which organisations should provide the rules. For example, Costa Rica prefers local to global rule-making; Mexico prefers global and dislikes local, similar to Peru, Argentina, and Brazil; Colombia prefers global and local rule-making simultaneously; and Bolivia prefers local organisations to design climate treaties. This is an important point and has far-reaching consequences for policy design in the region. The lack of coordination on rule-making responsibilities may configure a case of Arrow's impossibility theorem \citep{arrow1950difficulty}. Should a polycentric system be put for vote at international arenas such as the United Nations or the Organisation of American States, it is not clear how elites would reach a consensus decision. Based on our data, we cannot affirm which outcome would prevail. 
 
 Figure~\ref{fig:types} shows the results disaggregated by elite type. Academics, members of the civil society, and representatives in the executive and legislative branches hold similar views about how conflicts should be resolved, what punishment to apply to lawbreakers (fines and blacklisting), and the duration of the agreements. These are in line with our previous results.
 
@@ -208,7 +208,7 @@ Figure~\ref{fig:types} shows the results disaggregated by elite type. Academics,
 	\label{fig:types}
 \end{figure}
 
-Differences emerge in two of the six attributes of interest. First, whereas academics and members of the civil society are less favourable to allowing the federal government to formulate the rules, members of the executive and the legislative -- part of federal government themselves -- are more likely to see themselves as the preferred rule-makers. Second, members of the legislative have a stronger opinion that rich countries should bear the larger part of the agreement costs (58.4\%, SE = 3.5). 
+Significant differences emerge in two of the six attributes of interest. First, whereas academics and members of the civil society are less favourable to allowing the federal government to formulate the rules, members of the executive and the legislative -- part of federal government themselves -- are more likely to see themselves as the preferred rule-makers. Second, members of the legislative have a stronger opinion that rich countries should bear the larger part of the agreement costs (58.4\%, SE = 3.5). 
 
 \section{Discussion}
 \label{sec:discussion}
