change figure labels

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -131,7 +131,7 @@ The hypothetical climate change agreements includes six attributes: 1) which org
 
 \begin{table}[ht]
 \begin{center}
-\caption{\textbf{Design principles for climate change mitigation conjoint experiments}}
+\caption{\textbf{Attributes and values for climate change mitigation conjoint experiments}}
 \label{tab:categories} 
 \begin{tabular}{l !{\vrule width 1pt}p{9cm}}
 \Xhline{2\arrayrulewidth}
@@ -158,7 +158,7 @@ The categories map main conceptual differences between polycentric and state-led
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=13cm]{conjoint-cropped.pdf}
-	\caption{\textbf{Example of conjoint experiment design}}
+	\caption{\textbf{Example of conjoint table presented to respondents}}
 	\label{fig:conjoint}
 \end{figure}
 
@@ -172,7 +172,7 @@ Figure~\ref{fig:pooled} shows our main results. The graph illustrates the prefer
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.9\linewidth,height=11.5cm]{pooled.pdf}
-	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement in 10 Latin American countries (pooled data)}}
+	\caption{\textbf{Effect of institutional attributes on the probability of support for climate change agreements in 10 Latin American countries (pooled data)}}
 	\label{fig:pooled}
 \end{figure}
 
@@ -191,7 +191,7 @@ Overall, the results do not conform to strictly top-down or bottom-down approach
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{countries.pdf}
-	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by country}}
+	\caption{\textbf{Effect of institutional attributes on the probability of support for climate change agreement by country}}
 	\label{fig:countries}
 \end{figure}
 
@@ -204,7 +204,7 @@ Figure~\ref{fig:types} shows the results disaggregated by elite type. Academics,
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{types.pdf}
-	\caption{\textbf{Effect of agreement dimensions on the probability of support for climate change agreement by elite type}}
+	\caption{\textbf{Effect of institutional attributes on the probability of support for climate change agreement by elite type}}
 	\label{fig:types}
 \end{figure}
 
