capitalise references, add access dates to urls

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -160,7 +160,7 @@
  author = {De Witte, Melissa},
  editor = {{Stanford Earth}},
  title = {{Public Support for Climate Policy Remains Strong}},
- howpublished = {\href{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}{\texttt{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}}},
+ howpublished = {\href{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}{\texttt{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}}. Access: May 2019},
  year = {2018},
 }
 
@@ -168,7 +168,7 @@
  author = {Wike, Richard},
  editor = {{Pew Research Center}},
  title = {{What the World Thinks about Climate Change in 7 Charts}},
- howpublished = {\href{http://pewrsr.ch/1PdpUf4}{\texttt{http://pewrsr.ch/1PdpUf4}}},
+ howpublished = {\href{http://pewrsr.ch/1PdpUf4}{\texttt{http://pewrsr.ch/1PdpUf4}}. Access: May 2019},
  year = {2018},
 }
 
@@ -176,7 +176,7 @@
  author = {{European Commission}},
  editor = {{European Commission}},
  title = {{Citizen Support for Climate Action}},
- howpublished = {\href{https://ec.europa.eu/clima/citizens/support_en}{\texttt{https://ec.europa.eu/clima/citizens/support\_en}}},
+ howpublished = {\href{https://ec.europa.eu/clima/citizens/support_en}{\texttt{https://ec.europa.eu/clima/citizens/support\_en}}. Access: May 2019},
  year = {2018},
 }
 
@@ -184,7 +184,7 @@
  author = {Jeff Tollefson},
  editor = {{Nature News}},
  title = {Global industrial carbon emissions to reach all-time high in 2018},
- howpublished = {\href{https://www.nature.com/articles/d41586-018-07666-6}{\texttt{https://www.nature.com/articles/d41586-018-07666-6}}},
+ howpublished = {\href{https://www.nature.com/articles/d41586-018-07666-6}{\texttt{https://www.nature.com/articles/d41586-018-07666-6}}. Access: May 2019},
  year = {2018},
 } 
 
@@ -262,7 +262,7 @@
 }
 
 @article{rayner2010eat,
-  title={How to eat an elephant: a bottom-up approach to climate policy},
+  title={{How to Eat an Elephant: A Bottom-Up Approach to Climate Policy}},
   author={Rayner, Steve},
   journal={Climate Policy},
   volume={10},
@@ -425,7 +425,7 @@ year = {2019}
   author = {Thomas J. Leeper},
   year = {2018},
   note = {R package version 0.3.0},
-  howpublished = {\href{https://thomasleeper.com/cregg}{\texttt{https://thomasleeper.com/cregg}}}
+  howpublished = {Available at \href{https://thomasleeper.com/cregg}{\texttt{https://thomasleeper.com/cregg}}. Access: May 2019}
 }
 
 @misc{rstats2019,
@@ -434,7 +434,7 @@ year = {2019}
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2018},
-    howpublished = {\href{https://www.R-project.org}{\texttt{https://www.R-project.org}}},
+    howpublished = {\href{https://www.R-project.org}{\texttt{https://www.R-project.org}}. Access: May 2019},
   }
 
 @misc{leeper2018subgroup,
@@ -442,7 +442,7 @@ year = {2019}
 	author = {Leeper, Thomas J. and Hobolt, Sara B. and Tilley, James},
 	journal = {Political Analysis},
 	year = {2018},
-	howpublished = {\href{https://bit.ly/2E5oKSq}{\texttt{https://bit.ly/2E5oKSq}}}
+	howpublished = {\href{https://bit.ly/2E5oKSq}{\texttt{https://bit.ly/2E5oKSq}}. Access: May 2019}
 }
 
 @article{arrow1950difficulty,
