capitalise one reference

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -89,7 +89,7 @@
 }
 
 @article{ostrom2012nested,
-  title={Nested externalities and polycentric institutions: must we wait for global solutions to climate change before taking actions at other scales?},
+  title={{Nested Externalities and Polycentric Institutions: Must We Wait for Global Solutions to Climate Change Before Taking Actions at Other Scales?}},
   author={Ostrom, Elinor},
   journal={Economic Theory},
   volume={49},
